[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/game_player.gd" type="Script" id=1]

[node name="GamePlayer" type="Node2D"]
script = ExtResource( 1 )

[node name="GameOverDisplay" type="Panel" parent="."]
editor/display_folded = true
margin_left = 317.5
margin_top = 154.0
margin_right = 724.5
margin_bottom = 390.0

[node name="MainMenu" type="Button" parent="GameOverDisplay"]
margin_left = 130.5
margin_top = 141.0
margin_right = 278.5
margin_bottom = 209.0
text = "Main Menu"

[node name="Label" type="Label" parent="GameOverDisplay"]
margin_left = -1.5
margin_top = 21.0
margin_right = 405.5
margin_bottom = 74.0
text = "Game Over"
align = 1

[node name="BallSpeed" type="Label" parent="."]
margin_left = 13.5
margin_top = 10.5
margin_right = 53.5
margin_bottom = 24.5
[connection signal="pressed" from="GameOverDisplay/MainMenu" to="." method="_on_MainMenu_pressed"]
